src/objects/Int_Collateral_Party__c.object
<CustomObject>
    <description>Int Junction Object for Collateral &amp; Party</description>
    <fields>
        <fullName>Collateral_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Collateral Name</description>
        <label>Collateral Name</label>
        <referenceTo>Int_Collateral__c</referenceTo>
        <relationshipLabel>Int Collaterals Parties</relationshipLabel>
        <relationshipName>Int_Collaterals_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Number__c</fullName>
        <description>Collateral Number</description>
        <label>Collateral Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Source_System__c</fullName>
        <description>Collateral Source System</description>
        <label>Collateral Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Collateral_Type__c</fullName>
        <description>Collateral Type</description>
        <label>Collateral Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Committed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Committed check box</description>
        <label>Committed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Party_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Party Name</description>
        <label>Party Name</label>
        <referenceTo>Int_Party__c</referenceTo>
        <relationshipLabel>Int Collaterals Parties</relationshipLabel>
        <relationshipName>Int_Collaterals_Parties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Party_Number__c</fullName>
        <description>Party Number</description>
        <label>Party Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Role_Type_Code__c</fullName>
        <description>Party Role Type Code</description>
        <label>Party Role Type Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Source_System__c</fullName>
        <description>Party Source System</description>
        <label>Party Source System</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Int Collateral Party</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Collateral_Source_System__c</columns>
        <columns>Collateral_Number__c</columns>
        <columns>Collateral_Type__c</columns>
        <columns>Party_Source_System__c</columns>
        <columns>Party_Number__c</columns>
        <columns>Party_Role_Type_Code__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CPI-{0000000000}</displayFormat>
        <label>Collateral Party Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Collaterals Parties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>